--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light">
+      <span class="nav-left">
+        <div class="navbar-brand"><%= link_to "Idea Factory", ideas_path%></div>
+      </span>
+
+      <span class="nav justify-content-end">
+        <div class="nav-item"><%= link_to "New Idea", new_idea_path %></div>
+      </span>
+    </nav>
     <%= yield %>
   </body>
 </html>
