--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,7 +1,7 @@
-<h1>Idea Show Page</h1>
 <h2><%= @idea.title %></h2>
 <p><%= @idea.description %></p>
-<div>Created at:<%= @idea.user&.full_name || "Deleted" %></div>
+<div>Created by:<%= @idea.user&.full_name || "Deleted" %></div>
+<p>Created: <%= @idea.created_at %></p>
 <% if can? :crud, @idea %>
     <%= link_to 'Edit', edit_idea_path(@idea) %>
 <% end %>
@@ -9,3 +9,28 @@
     <%= button_to 'Delete', idea_path(@idea), method: :delete, data: { confirm: "Are you sure?" } %>
 <% end %>
 <hr/>
+<%= flash[:notice] || flash[:alert] %>
+<div>
+    <h3>Reviews</h3>
+    <%= form_with model: [@idea, @review], local:true do |form| %>
+        <% if @review.errors.any? %>
+            <p><% @review.errors.full_messages.join(",")%></p>
+        <% end %>
+
+        <div>
+            <%= form.text_area(:body, style:"width:100%;", rows:3)%>
+        </div><br>
+        <div class="button"><%= form.submit class: "btn btn-outline-primary" %></div>
+    <% end %>
+</div>
+
+<% @reviews.each do |review| %>
+<div>
+    <p><%= review.body %><p>
+    <small>reviewed <%= time_ago_in_words(review.updated_at) %></small>
+        <div> reviewed by: <%= review.user&.full_name || "Deleted" %>
+    <% if can? :crud, review %>
+        <%= link_to "Delete", idea_review_path(review.idea_id, review.id), method: :delete, data: {confirm: "Are you sure you want to delete your review?"} %>
+    <% end %>
+<% end %>
+</div>
