--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -3,6 +3,7 @@
         <h3><%= link_to idea.title, idea_path(idea) %></h3>
         <div><%= idea.description %></div>
         <a href>By <%= idea.user&.full_name || "Deleted" %></a>
+        <p>Members: <%= idea.likers.count%> | 👍 likes</p>
     </div>
     <hr>
 <% end %>
