--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -2,6 +2,14 @@
 <p><%= @idea.description %></p>
 <div>Created by:<%= @idea.user&.full_name || "Deleted" %></div>
 <p>Created: <%= @idea.created_at %></p>
+<small>Liked by: <%= @idea.likes.count %> users</small>
+<small>
+<% if @like.present? %>
+        <%= button_to '👎 Unlike', like_path(@like), method: :delete %>
+    <% else %>
+        <%= button_to '👍 Like', idea_likes_path(@idea), method: :post %>
+    <% end %>
+</small>
 <% if can? :crud, @idea %>
     <%= link_to 'Edit', edit_idea_path(@idea) %>
 <% end %>
