--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,21 @@
   <body>
     <nav class="navbar navbar-light bg-light">
       <span class="nav-left">
+        <img class='logo' src = "<%=asset_path '427735.png' %>"></img>
         <div class="navbar-brand"><%= link_to "Idea Factory", ideas_path%></div>
       </span>
 
       <span class="nav justify-content-end">
-        <div class="nav-item"><% if user_signed_in? %>
-        Hello <%= link_to current_user.full_name %>,
-        <%= link_to "Logout", session_path, method: :delete, data: {confirm: "Are you sure you want to log out?"}%>
-        <% else %>
-          <%= link_to "Login", new_session_path %> |
-          <%= link_to "Sign Up", new_user_path %>
-        <% end %></div>
-        <div class="nav-item"><%= link_to "New Idea", new_idea_path %></div>
+        <div class="nav flex-column">
+           <div><% if user_signed_in? %>
+            Hello <%= link_to current_user.full_name %>,
+            <%= link_to "Logout", session_path, method: :delete, data: {confirm: "Are you sure you want to log out?"}%>
+            <% else %>
+              <%= link_to "Login", new_session_path %> |
+              <%= link_to "Sign Up", new_user_path %>
+            <% end %></div>
+            <br>
+          <div class="nav-item"><%= link_to "New Idea", new_idea_path %></div>
       </span>
     </nav>
 
