--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,9 @@
         <div class="nav flex-column">
            <div><% if user_signed_in? %>
             Hello <%= link_to current_user.full_name %>,
-            <%= link_to "Logout", session_path, method: :delete, data: {confirm: "Are you sure you want to log out?"}%>
+            <%= link_to "Sign Out", session_path, method: :delete, data: {confirm: "Are you sure you want to log out?"}%>
             <% else %>
-              <%= link_to "Login", new_session_path %> |
+              <%= link_to "Sign In", new_session_path %> |
               <%= link_to "Sign Up", new_user_path %>
             <% end %></div>
             <br>
