--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,6 @@
         <img class='logo' src = "<%=asset_path '427735.png' %>"></img>
         <div class="navbar-brand"><%= link_to "Idea Factory", ideas_path%></div>
       </span>
-
       <span class="nav justify-content-end">
         <div class="nav flex-column">
            <div><% if user_signed_in? %>
@@ -30,10 +29,9 @@
           <div class="nav-item"><%= link_to "New Idea", new_idea_path %></div>
       </span>
     </nav>
-
- 
-    
-    <% flash[:notice] || flash[:alert] %>
+    <div>
+      <%= render 'layouts/alerts' %>
+    </div>
     <%= yield %>
   </body>
 </html>
